# CurvesAPI

./: CMakeLists.txt  README.md  optional_tasks.cpp
include/: CurvesAPI.h
libs/include/: Curves.h
libs/src/: Curves.cpp
libs/x64-debug/: Curves.lib
libs/x64-release/: Curves.lib
src/: CurvesAPI.cpp
